# droid48

./: .cproject  .gitignore  .project  AndroidManifest.xml  Makefile  README  build.gradle  local.properties  project.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hp48s  rams
app/src/main/java/org/ab/x48/: AssetUtil.java  EmulatorThread.java  HPView.java  Settings.java  X48.java
app/src/main/jni/: CMakeLists.txt  Makefile.am  actions.c  append.h  binio.h  buttons.h  debugger.h  disasm.c  disasm.h  dump2rom.c  emulate.c  errors.h  global.h  hp48.h  hp48char.h  icon.h  lcd.c  main.c  memory.c  mkcard.c  register.c  resources.h  timer.c  timer.h  version.h  x48.c  x48.h
app/src/main/jni/bitmaps/: A.h  B.h  E.h  G.h  H.h  I.h  J.h  L.h  M.h  N.h  S.h  U.h  W.h  X.h  Y.h  Z.h  ann_battery.h  ann_io.h  ann_right.h  arrow_gx.h  blank.h  bracket_gx.h  colon.h  colon_gx.h  comma_gx.h  curly_gx.h  diff.h  div.h  down.h  equal_gx.h  exp.h  gx_128K_ram.h  hash_gx.h  hp48_bottom.h  hp48_disp.h  hp48_green_gx.h  hp48_icon.h  hp48_keys.h  hp48_logo.h  hp48_logo_gx.h  (+18 more)
app/src/main/res/layout/: file_row.xml  main.xml
app/src/main/res/values/: strings.xml
assets/: hp48  ram  roms
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  Makefile.in  X48.ad.h  actions.c  annunc.h  binio.c  checkrom.c  config.h  constants.h  debugger.c  device.c  device.h  emulate.c  errors.c  g.sh  hp.h  hp48.h  hp48_emu.h  init.c  lcd.c  main.c  mmu.h  options.c  options.h  resources.c  rom  romio.c  romio.h  rpl.c  rpl.h  serial.c  small.h  timer.c  x48.c  x48.h
jni/bitmaps/: C.h  D.h  F.h  K.h  O.h  P.h  Q.h  R.h  T.h  V.h  alpha.h  angle.h  angle_gx.h  ann_alpha.h  ann_busy.h  ann_left.h  arrow.h  bs.h  comma.h  equal.h  exp_gx.h  gx_green.h  gx_silver.h  hash.h  hp.h  hp48_blue.h  hp48_orange.h  hp48_text.h  hp48_text_gx.h  hp48_top.h  hp48gx.h  hp48sx.h  inv.h  last.h  lbrace.h  mul.h  neg.h  nl.h  nl_gx.h  parens_gx.h  (+20 more)
res/: Thumbs.db
res/layout/: main.xml
res/values/: dimens.xml  strings.xml
res/xml/: state0.xml  state1.xml
src/org/ab/x48/: AssetUtil.java  EmulatorThread.java  HPView.java  ProgListView.java  Settings.java  Wrapper.java  Wrapper5.java  X48.java
